--- a/src/pug/blocks/news.pug
+++ b/src/pug/blocks/news.pug
@@ -1,5 +1,5 @@
 section.news
-	.container
+	.container.container--full
 		.news__block
 			.topic.topic--dark.news__topic новости
 			.news__slider.news__slider--mb.swiper-container.__js_slider-news
