--- a/src/pug/blocks/nlu.pug
+++ b/src/pug/blocks/nlu.pug
@@ -1,5 +1,5 @@
 section.nlu
-	.container
+	.container.container--full
 		.topic.nlu__topic State-of-the-art NLU
 		.nlu__title.nlu__title--mobile NLU
 		.nlu__subtitle NLU Autofaq – лидирующий алгоритм обработки и понимания естественного языка
