--- a/src/pug/pages/cases.pug
+++ b/src/pug/pages/cases.pug
@@ -9,13 +9,13 @@ block vars
 
 block main
 	article.cases
-		.container
+		.container.container--full
 			.cases__full-screen
 				h1.cases__title Сases
 				.cases__text <span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах
 		.cases__grid
 			.clients__col
-				.clients-card.clients-card--simple.cases__item
+				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name Фосагро
 						.clients-card__client-logo
@@ -35,7 +35,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.clients-card--simple.cases__item
+				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name Фосагро
 						.clients-card__client-logo
@@ -55,7 +55,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.clients-card--simple.cases__item
+				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name Мегафон
 						.clients-card__client-logo
@@ -76,7 +76,7 @@ block main
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
 			.clients__col
-				.clients-card.clients-card--simple.cases__item
+				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name PWC
 						.clients-card__client-logo
@@ -96,7 +96,7 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.clients-card--simple.cases__item
+				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name Сколково
 						.clients-card__client-logo
