--- a/src/pug/pages/news-page.pug
+++ b/src/pug/pages/news-page.pug
@@ -9,7 +9,7 @@ block vars
 
 block main
 	article.news-page
-		.container.news-page__container
+		.container.container--full.news-page__container
 			h1.news-page__title Новости
 		.news-page__wrapper
 			each item in NEWS_PAGE
