--- a/src/pug/pages/tariffs.pug
+++ b/src/pug/pages/tariffs.pug
@@ -9,7 +9,7 @@ block vars
 
 block main
 	article.tariffs
-		.container
+		.container.container--full
 			h1.tariffs__title Tariffs
 		.tariffs__wrapper
 			.tariffs__col
