--- a/src/pug/partials/_footer.pug
+++ b/src/pug/partials/_footer.pug
@@ -1,5 +1,5 @@
 footer.footer
-	.container.footer__container
+	.container.container--full.footer__container
 		.footer__part.footer__part--1
 			.footer__logo
 				+icon('logo')(width='249', height='62')
@@ -77,7 +77,7 @@ footer.footer
 					a(href='#', target='_blank') Контактная информация
 		.footer__part.footer__part--3
 			+button('Начнем диалог', 'footer__btn')
-	.container.footer__container.footer__container--mt
+	.container.footer__container.container--full.footer__container--mt
 		.footer__part.footer__part--1
 			.footer__bottom-text © 2019—2021 Autofaq. <br> All rights reserved
 		.footer__part.footer__part--2
