--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -27,7 +27,7 @@
 	&__tabs-item {
 		max-width: 500px;
 		width: 100%;
-		height: 237px;
+		height: 25%;
 		padding: 58px 180px 35px 53px;
 		background-color: $white;
 		font-size: 25px;
