--- a/src/pug/blocks/features.pug
+++ b/src/pug/blocks/features.pug
@@ -1,5 +1,5 @@
 section.features
-	.container
+	.container.features__container
 		.topic.features__topic Key features
 		.features__marquee.js-marquee-features Омниканальность
 		.features__slider.swiper-container.__js_slider-features
