--- a/src/pug/partials/_sidebar.pug
+++ b/src/pug/partials/_sidebar.pug
@@ -36,7 +36,7 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
 			a(href='#', target='_blank') Решения
@@ -69,7 +69,7 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
 			a(href='#', target='_blank') Кейсы
@@ -102,7 +102,7 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
 			a(href='#', target='_blank') Тарифы
@@ -135,7 +135,7 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
 			a(href='#', target='_blank') Ресурсы
@@ -168,7 +168,7 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
 		li
 			a(href='#', target='_blank') Компания
@@ -201,5 +201,5 @@ aside.sidebar
 								p
 									a(href='#', target='_blank') Смотреть
 				.sidebar__menu-image
-					img(src='images/bg-menu.jpg', alt='')
+					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
