--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -8,21 +8,38 @@
 		content: '';
 		display: block;
 		width: 100%;
-		height: 50%;
+		height: 55%;
 		position: absolute;
 		left: 0;
 		z-index: -1;
+
+		@media (min-height: 1250px) {
+			height: 64%;
+		}
 	}
 
 	&::before {
+		height: 45%;
 		top: 0;
-		background-image: linear-gradient(
-				-45deg,
-				hsl(218deg 68% 45%) 0%,
-				hsl(188deg 53% 47%) 0%,
-				hsl(162deg 64% 56%) 72%,
-				hsl(162deg 53% 47%) 7%
-		);
+		background-image: linear-gradient(-90deg,#255ec1 0,#38a6b7 0,#47d7ac 72%,#38b791 7%);
+
+		@media (min-height: 1250px) {
+			height: 36%;
+		}
+
+		@include max(2400) {
+			background-image: linear-gradient(-60deg,#255ec1 0,#38a6b7 0,#47d7ac 72%,#38b791 7%);
+		}
+
+		@include max(xxl) {
+			background-image: linear-gradient(
+					-45deg,
+					hsl(218deg 68% 45%) 0%,
+					hsl(188deg 53% 47%) 0%,
+					hsl(162deg 64% 56%) 72%,
+					hsl(162deg 53% 47%) 7%
+			);
+		}
 	}
 
 	&::after {
