--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -4,10 +4,16 @@
 	min-height: 1059px;
 	background-color: $blue-25;
 	background-repeat: no-repeat;
-	background-position: bottom;
+	background-position: center calc(100% + 125px);
+	background-size: 100%;
 	padding: 53px 0 123px;
 	position: relative;
 	overflow: hidden;
+
+	@include max(xxl) {
+		background-position: bottom;
+		background-size: unset;
+	}
 
 	@include max(lg) {
 		min-height: auto;
@@ -20,6 +26,16 @@
 		padding: 12px 0 50px;
 	}
 
+	&__container {
+		width: 86%;
+		margin: 0 auto 0 0;
+		padding: 0 55px;
+
+		@include max(xxl) {
+			width: 100%;
+		}
+	}
+
 	&__topic {
 		@include max(lg) {
 			display: none;
@@ -29,7 +45,6 @@
 	&__slider {
 		padding-top: 67px;
 		position: relative;
-		margin-right: 112px;
 
 		@include max(xl) {
 			margin-right: 0;
@@ -60,6 +75,12 @@
 		font-size: 16px;
 		line-height: 19px;
 		color: $white;
+
+		@include max(xl) {
+			right: unset;
+			left: 50%;
+			transform: translateX(-50%);
+		}
 
 		@include max(lg) {
 			display: none;
