--- a/src/styles/blocks/news-card.scss
+++ b/src/styles/blocks/news-card.scss
@@ -73,7 +73,7 @@
 	&__top {
 		display: flex;
 		justify-content: space-between;
-		border-bottom: 1px solid rgba($black, 0.2);
+		border-bottom: 1px solid rgba($black-31, 0.2);
 		padding-bottom: 27px;
 		transition: border-color 0.3s ease;
 
