--- a/src/pug/pages/about-page.pug
+++ b/src/pug/pages/about-page.pug
@@ -11,122 +11,117 @@ block main
 	article.about-page
 		.container.container--full
 			h1.about-page__title Retail & <span>eCommerce</span>
-			.about-page__slider.swiper-container.__js_slider-about
-				.swiper-wrapper
-					.swiper-slide.about-page__slide
-						.about-page__block.about-page__block--full
-							p Роботизация сложной поддержки сети, торговых представителей, офисов и сложных внутренних бизнес процессов -
-								|  <span>например, сопровождение проектных, аудиторских команд с базой знаний</span>
-							p
-						.about-page__block
-							p Бизнес процесс и текущие задачи:
-							p В компании есть сотрудники / торговые представители / франчайзи, у которых в офисах, поездках по стране часто
-								|  возникают одни и те же проблемы, вопросы, сложности с бизнес процессами, коммуникацией по продуктам
-								|  и услугам с клиентами. За решением этих вопросов они обращаются к службе поддержки по телефону, почте,
-								|  к документации, к соседу или делают наугад.
-						.about-page__block
-							p Задачи проекта:
-							p Совокупное число наших подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем
-								|  отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных запросов в текстовых каналах,
-								|  и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть
-								|  входящих запросов, не увеличивая в разы штат сотрудников службы клиентского сервиса Совокупное число наших
-								|  подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно
-								|  мы получаем более 30 тыс. содержательных запросов в текстовых каналах, и ни одного клиента мы не можем
-								|  заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть входящих запросов, не увеличивая
-								|  в разы штат сотрудников службы клиентского сервисаСовокупное число наших подписчиков превышает 4,4 млн человек.
-								|  Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных
-								|  запросов в текстовых каналах, и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ
-					.swiper-slide.about-page__slide
-						.about-page__block.about-page__block--full
-							p Роботизация сложной поддержки сети, торговых представителей, офисов и сложных внутренних бизнес процессов -
-								|  <span>например, сопровождение проектных, аудиторских команд с базой знаний</span>
-							p
-						.about-page__block
-							p Бизнес процесс и текущие задачи:
-							p В компании есть сотрудники / торговые представители / франчайзи, у которых в офисах, поездках по стране часто
-								|  возникают одни и те же проблемы, вопросы, сложности с бизнес процессами, коммуникацией по продуктам
-								|  и услугам с клиентами. За решением этих вопросов они обращаются к службе поддержки по телефону, почте,
-								|  к документации, к соседу или делают наугад.
-						.about-page__block
-							p Задачи проекта:
-							p Совокупное число наших подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем
-								|  отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных запросов в текстовых каналах,
-								|  и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть
-								|  входящих запросов, не увеличивая в разы штат сотрудников службы клиентского сервиса Совокупное число наших
-								|  подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно
-								|  мы получаем более 30 тыс. содержательных запросов в текстовых каналах, и ни одного клиента мы не можем
-								|  заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть входящих запросов, не увеличивая
-								|  в разы штат сотрудников службы клиентского сервисаСовокупное число наших подписчиков превышает 4,4 млн человек.
-								|  Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных
-								|  запросов в текстовых каналах, и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ
-					.swiper-slide.about-page__slide
-						.about-page__block.about-page__block--full
-							p Роботизация сложной поддержки сети, торговых представителей, офисов и сложных внутренних бизнес процессов -
-								|  <span>например, сопровождение проектных, аудиторских команд с базой знаний</span>
-							p
-						.about-page__block
-							p Бизнес процесс и текущие задачи:
-							p В компании есть сотрудники / торговые представители / франчайзи, у которых в офисах, поездках по стране часто
-								|  возникают одни и те же проблемы, вопросы, сложности с бизнес процессами, коммуникацией по продуктам
-								|  и услугам с клиентами. За решением этих вопросов они обращаются к службе поддержки по телефону, почте,
-								|  к документации, к соседу или делают наугад.
-						.about-page__block
-							p Задачи проекта:
-							p Совокупное число наших подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем
-								|  отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных запросов в текстовых каналах,
-								|  и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть
-								|  входящих запросов, не увеличивая в разы штат сотрудников службы клиентского сервиса Совокупное число наших
-								|  подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно
-								|  мы получаем более 30 тыс. содержательных запросов в текстовых каналах, и ни одного клиента мы не можем
-								|  заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть входящих запросов, не увеличивая
-								|  в разы штат сотрудников службы клиентского сервисаСовокупное число наших подписчиков превышает 4,4 млн человек.
-								|  Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных
-								|  запросов в текстовых каналах, и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ
-				.about-page__nav-wrapper
-					+slider-arrows('about-page__nav')
-					.about-page__counter
-						span.current 01
-						span.all 03
-		.about-page__grid
-			.about-page__col
-				.clients-card.clients-card--simple.about-page__item
-					.clients-card__client
-						.clients-card__client-name Фосагро
-						.clients-card__client-logo
-							div
-								+icon('fosagro')(width='190', height='142')
-							.clients-card__toggle
-						.clients-card__inner
-							.clients-card__top
-								.clients-card__icon
-									+icon('rostelekom-3')(width='221', height='69')
-							.clients-card__middle
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
-							.clients-card__bottom
-								.clients-card__bottom-item
-									p ₽20М
-									p Годовая экономия на ФОТ
-								.clients-card__bottom-item
-									p NPS до 30
-									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-			.about-page__col
-				.clients-card.clients-card--simple.about-page__item
-					.clients-card__client
-						.clients-card__client-name PWC
-						.clients-card__client-logo
-							div
-								+icon('pwc')(width='193', height='146')
-							.clients-card__toggle
-						.clients-card__inner
-							.clients-card__top
-								.clients-card__icon
-									+icon('rostelekom-3')(width='221', height='69')
-							.clients-card__middle
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
-							.clients-card__bottom
-								.clients-card__bottom-item
-									p ₽20М
-									p Годовая экономия на ФОТ
-								.clients-card__bottom-item
-									p NPS до 30
-									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+			.about-page__content
+				.about-page__block.about-page__block--full
+					p Роботизация сложной поддержки сети, торговых представителей, офисов и сложных внутренних бизнес процессов -
+						|  <span>например, сопровождение проектных, аудиторских команд с базой знаний</span>
+					p
+				.about-page__block
+					p Бизнес процесс и текущие задачи:
+					p В компании есть сотрудники / торговые представители / франчайзи, у которых в офисах, поездках по стране часто
+						|  возникают одни и те же проблемы, вопросы, сложности с бизнес процессами, коммуникацией по продуктам
+						|  и услугам с клиентами. За решением этих вопросов они обращаются к службе поддержки по телефону, почте,
+						|  к документации, к соседу или делают наугад.
+				.about-page__block
+					p Задачи проекта:
+					p Совокупное число наших подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем
+						|  отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных запросов в текстовых каналах,
+						|  и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть
+						|  входящих запросов, не увеличивая в разы штат сотрудников службы клиентского сервиса Совокупное число наших
+						|  подписчиков превышает 4,4 млн человек. Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно
+						|  мы получаем более 30 тыс. содержательных запросов в текстовых каналах, и ни одного клиента мы не можем
+						|  заставлять ждать. Решение AutoFAQ помогает оперативно закрывать большую часть входящих запросов, не увеличивая
+						|  в разы штат сотрудников службы клиентского сервисаСовокупное число наших подписчиков превышает 4,4 млн человек.
+						|  Прогнозируем, что к концу 2021 года достигнем отметки в 5 млн. Ежемесячно мы получаем более 30 тыс. содержательных
+						|  запросов в текстовых каналах, и ни одного клиента мы не можем заставлять ждать. Решение AutoFAQ
+			.about-page__nav-wrapper
+				+slider-arrows('about-page__nav')
+				.about-page__counter
+					span.current 01
+					span.all 03
+		.about-page__slider.swiper-container.__js_slider-about
+			.swiper-wrapper
+				.swiper-slide.about-page__slide
+					.clients-card.clients-card--simple.about-page__item
+						.clients-card__client
+							.clients-card__client-name Фосагро
+							.clients-card__client-logo
+								div
+									+icon('fosagro')(width='190', height='142')
+								.clients-card__toggle
+							.clients-card__inner
+								.clients-card__top
+									.clients-card__icon
+										+icon('rostelekom-3')(width='221', height='69')
+								.clients-card__middle
+									.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+								.clients-card__bottom
+									.clients-card__bottom-item
+										p ₽20М
+										p Годовая экономия на ФОТ
+									.clients-card__bottom-item
+										p NPS до 30
+										p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+				.swiper-slide.about-page__slide
+					.clients-card.clients-card--simple.about-page__item
+						.clients-card__client
+							.clients-card__client-name Фосагро
+							.clients-card__client-logo
+								div
+									+icon('fosagro')(width='190', height='142')
+								.clients-card__toggle
+							.clients-card__inner
+								.clients-card__top
+									.clients-card__icon
+										+icon('rostelekom-3')(width='221', height='69')
+								.clients-card__middle
+									.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+								.clients-card__bottom
+									.clients-card__bottom-item
+										p ₽20М
+										p Годовая экономия на ФОТ
+									.clients-card__bottom-item
+										p NPS до 30
+										p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+				.swiper-slide.about-page__slide
+					.clients-card.clients-card--simple.about-page__item
+						.clients-card__client
+							.clients-card__client-name Фосагро
+							.clients-card__client-logo
+								div
+									+icon('fosagro')(width='190', height='142')
+								.clients-card__toggle
+							.clients-card__inner
+								.clients-card__top
+									.clients-card__icon
+										+icon('rostelekom-3')(width='221', height='69')
+								.clients-card__middle
+									.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+								.clients-card__bottom
+									.clients-card__bottom-item
+										p ₽20М
+										p Годовая экономия на ФОТ
+									.clients-card__bottom-item
+										p NPS до 30
+										p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+				.swiper-slide.about-page__slide
+					.clients-card.clients-card--simple.about-page__item
+						.clients-card__client
+							.clients-card__client-name Фосагро
+							.clients-card__client-logo
+								div
+									+icon('fosagro')(width='190', height='142')
+								.clients-card__toggle
+							.clients-card__inner
+								.clients-card__top
+									.clients-card__icon
+										+icon('rostelekom-3')(width='221', height='69')
+								.clients-card__middle
+									.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+								.clients-card__bottom
+									.clients-card__bottom-item
+										p ₽20М
+										p Годовая экономия на ФОТ
+									.clients-card__bottom-item
+										p NPS до 30
+										p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
