--- a/src/styles/blocks/clients-card.scss
+++ b/src/styles/blocks/clients-card.scss
@@ -27,7 +27,8 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		backdrop-filter: blur(24px);
+		filter: blur(24px);
+		background-color: rgba($white, 0.05);
 	}
 
 	&__client {
