--- a/src/pug/pages/cases-single.pug
+++ b/src/pug/pages/cases-single.pug
@@ -74,7 +74,7 @@ block main
 					'Мы внедрили автоматизированную систему на базе машинного обучения, которая успешно решила все поставленные задачи.',
 					'cases-card--blue'
 				)
-				.cases-single__indicators(style='background-image: url("../images/bg-case.jpg")')
+				.cases-single__indicators(style='background-image: url("/images/bg-case.jpg")')
 					.cases-single__indicators-title Показатели
 					.cases-single__indicators-wrapper
 						.cases-single__indicators-col
