--- a/src/pug/blocks/services.pug
+++ b/src/pug/blocks/services.pug
@@ -5,7 +5,7 @@ section.services
 			.services__mobile-wrapper
 				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
 					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
-				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
+				img(src='images/services/1.png', srcset='images/services/1@2x.png 2x', alt='')
 		.services__tabs-item
 			span IT-поддержка
 			.services__mobile-wrapper
@@ -15,30 +15,30 @@ section.services
 			span HR-поддержка
 			.services__mobile-wrapper
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
-				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
+				img(src='images/services/3.png', srcset='images/services/3@2x.png 2x', alt='')
 		.services__tabs-item
 			span Клиентская поддержка
 			.services__mobile-wrapper
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
-				img(src='images/services/2.png', srcset='images/services/2@2x.png 2x', alt='')
-	.services__content(style='background-image: url("images/services/1.png")')
-		.services__content-item.active
+				img(src='images/services/4.png', srcset='images/services/4@2x.png 2x', alt='')
+	.services__content
+		.services__content-item.active(style='background-image: url("images/services/des1.png")')
 			.services__title <span>Поддержка розничной сети,</span> проектных команд
 			.services__bottom
 				.services__text Autofaq заберет 70% общения на естественном языке, чтобы ваши
 					|  клиенты о ставались довольными, без увеличения ФОТ на поддержку
 				+button('подробнее', 'services__btn', '#')
-		.services__content-item
+		.services__content-item(style='background-image: url("images/services/des2.png")')
 			.services__title IT-поддержка
 			.services__bottom
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				+button('подробнее', 'services__btn', '#')
-		.services__content-item
+		.services__content-item(style='background-image: url("images/services/des3.png")')
 			.services__title HR-поддержка
 			.services__bottom
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
 				+button('подробнее', 'services__btn', '#')
-		.services__content-item
+		.services__content-item(style='background-image: url("images/services/des4.png")')
 			.services__title Клиентская поддержка
 			.services__bottom
 				.services__text Обрабатывайте в 3 раза больше <br> обращений в поддержку без увеличения <br> штата
