--- a/src/styles/blocks/cases-single.scss
+++ b/src/styles/blocks/cases-single.scss
@@ -210,6 +210,7 @@
 	&__indicators {
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-position: center bottom;
 		padding-bottom: 381px;
 
 		@include max(xl) {
