--- a/src/styles/blocks/services.scss
+++ b/src/styles/blocks/services.scss
@@ -93,6 +93,8 @@
 		justify-content: space-between;
 		height: 100%;
 		padding: 57px 54px;
+		background-repeat: no-repeat;
+		background-position: center;
 
 		&.active {
 			display: flex;
