--- a/src/pug/pages/cases.pug
+++ b/src/pug/pages/cases.pug
@@ -14,7 +14,7 @@ block main
 				h1.cases__title Сases
 				.cases__text <span>Наши клиенты – смелые инноваторы,</span> лидеры рынка в своих нишах
 		.cases__grid
-			.clients__col
+			.clients__flex
 				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name Фосагро
@@ -35,53 +35,32 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.clients-card--simple.clients__item
-					.clients-card__client
-						.clients-card__client-name Фосагро
-						.clients-card__client-logo
-							div
-								+icon('fosagro')(width='190', height='142')
-							.clients-card__toggle
-						.clients-card__inner
-							.clients-card__top
-								.clients-card__icon
-									+icon('rostelekom-3')(width='221', height='69')
-							.clients-card__middle
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
-							.clients-card__bottom
-								.clients-card__bottom-item
-									p ₽20М
-									p Годовая экономия на ФОТ
-								.clients-card__bottom-item
-									p NPS до 30
-									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-				.clients-card.clients-card--simple.clients__item
-					.clients-card__client
-						.clients-card__client-name Мегафон
-						.clients-card__client-logo
-							div
-								+icon('megafon-2')(width='383', height='69')
-							.clients-card__toggle
-						.clients-card__inner
-							.clients-card__top
-								.clients-card__icon
-									+icon('rostelekom-3')(width='221', height='69')
-							.clients-card__middle
-								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
-							.clients-card__bottom
-								.clients-card__bottom-item
-									p ₽20М
-									p Годовая экономия на ФОТ
-								.clients-card__bottom-item
-									p NPS до 30
-									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
-			.clients__col
 				.clients-card.clients-card--simple.clients__item
 					.clients-card__client
 						.clients-card__client-name PWC
 						.clients-card__client-logo
 							div
 								+icon('pwc')(width='193', height='146')
+							.clients-card__toggle
+						.clients-card__inner
+							.clients-card__top
+								.clients-card__icon
+									+icon('rostelekom-3')(width='221', height='69')
+							.clients-card__middle
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+							.clients-card__bottom
+								.clients-card__bottom-item
+									p ₽20М
+									p Годовая экономия на ФОТ
+								.clients-card__bottom-item
+									p NPS до 30
+									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+				.clients-card.clients-card--simple.clients__item
+					.clients-card__client
+						.clients-card__client-name Фосагро
+						.clients-card__client-logo
+							div
+								+icon('fosagro')(width='190', height='142')
 							.clients-card__toggle
 						.clients-card__inner
 							.clients-card__top
@@ -116,3 +95,24 @@ block main
 								.clients-card__bottom-item
 									p NPS до 30
 									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+				.clients-card.clients-card--simple.clients__item
+					.clients-card__client
+						.clients-card__client-name Мегафон
+						.clients-card__client-logo
+							div
+								+icon('megafon-2')(width='383', height='69')
+							.clients-card__toggle
+						.clients-card__inner
+							.clients-card__top
+								.clients-card__icon
+									+icon('rostelekom-3')(width='221', height='69')
+							.clients-card__middle
+								.clients-card__title <span>Клиентская техническая поддержка</span> B2B и B2C сервисов
+							.clients-card__bottom
+								.clients-card__bottom-item
+									p ₽20М
+									p Годовая экономия на ФОТ
+								.clients-card__bottom-item
+									p NPS до 30
+									p Рост NPS с -4 <br> до 30 за 6 <br> месяйв
+
