--- a/src/styles/blocks/clients.scss
+++ b/src/styles/blocks/clients.scss
@@ -104,9 +104,37 @@
 		}
 	}
 
+	&__flex{
+		width: 100%;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-auto-rows: 365px 412px;
+
+		@include max(xl) {
+			display: block;
+		}
+		&::before{
+			content: "";
+			display: block;
+			grid-row: 1;
+			grid-column: 2;
+			@include max(xl) {
+				display: none;
+			}
+		}
+	}
+
 	&__item {
+		height: auto;
+		grid-row: span 2;
 		+ #{$parent}__item {
 			border-top: 1px solid rgba($white, 0.2);
+		}
+		&:nth-child(even){
+			border-left: 1px solid rgba($white, 0.2);
+			@include max(xl) {
+				border-left: 0;
+			}
 		}
 	}
 }
