--- a/src/pug/partials/_header.pug
+++ b/src/pug/partials/_header.pug
@@ -1,5 +1,5 @@
 header.header(class= headerMod ? headerMod : '')
-	.header__container
+	.header__container.container
 		.header__about Cервис для роботизации службы поддержки клиентов или сотрудников в цифровых
 			|  каналах с помощью искусственного интеллекта
 		include ../partials/menu.pug
