--- a/src/styles/blocks/advantages-card.scss
+++ b/src/styles/blocks/advantages-card.scss
@@ -3,7 +3,7 @@
 
 	width: 100%;
 	height: 892px;
-	padding: 76px 94px 76px 56px;
+	padding: 76px 57px 76px;
 	background-color: $white;
 	position: relative;
 	z-index: 1;
@@ -13,11 +13,12 @@
 	}
 
 	@include max(xl) {
-		padding: 45px 20px;
+		padding: 45px 30px;
 	}
 
 	@include max(lg) {
 		height: auto;
+		padding: 45px 18px;
 	}
 
 	&__bg {
