--- a/src/styles/blocks/cases-card.scss
+++ b/src/styles/blocks/cases-card.scss
@@ -6,8 +6,8 @@
 	justify-content: space-between;
 	width: 100%;
 	height: 777px;
-	padding: 58px 98px 58px 52px;
-
+	padding: 58px 57px 58px;
+	border: 1px solid rgba(255, 255, 255, 0.2);
 	@include max(lg) {
 		height: auto;
 	}
@@ -148,7 +148,7 @@
 
 	&--review {
 		height: 849px;
-		padding: 44px 58px 58px 52px;
+		padding: 44px 58px 58px 57px;
 
 		@include max(xl) {
 			min-height: 400px;
