--- a/src/styles/blocks/tariffs.scss
+++ b/src/styles/blocks/tariffs.scss
@@ -12,6 +12,7 @@
 		display: block;
 		width: 1080px;
 		height: 1080px;
+		max-width: 100%;
 		background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='1080' height='1080' viewBox='0 0 1080 1080' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='540' cy='540' r='539.5' stroke='url(%23paint0_linear_253_18367)'/%3e%3cdefs%3e%3clinearGradient id='paint0_linear_253_18367' x1='777' y1='1.17873e-05' x2='274.5' y2='740.5' gradientUnits='userSpaceOnUse'%3e%3cstop stop-color='white'/%3e%3cstop offset='1' stop-color='white' stop-opacity='0'/%3e%3c/linearGradient%3e%3c/defs%3e%3c/svg%3e ");
 		background-repeat: no-repeat;
 		position: absolute;
@@ -67,11 +68,14 @@
 		&:first-child {
 			padding-top: 294px;
 			padding-left: 57px;
-
+			@include max(xl) {
+				padding-left: 30px;
+			}
 			@include max(lg) {
 				width: 100%;
 				padding-top: 0;
 				margin-bottom: 80px;
+				padding-left: 18px;
 			}
 
 			@include max(sm) {
