--- a/src/styles/partials/main.scss
+++ b/src/styles/partials/main.scss
@@ -68,7 +68,9 @@ textarea {
 	max-width: 100%;
 	padding: 0 57px;
 	margin: 0 auto;
-
+	@include max(xl) {
+		padding: 0 30px;
+	}
 	@include max(lg) {
 		padding: 0 18px;
 	}
