--- a/src/styles/blocks/cases-card.scss
+++ b/src/styles/blocks/cases-card.scss
@@ -8,6 +8,37 @@
 	height: 777px;
 	padding: 58px 57px 58px;
 	border: 1px solid rgba(255, 255, 255, 0.2);
+	border-bottom: none;
+	border-right: none;
+	&:last-child{
+		position: relative;
+		&::after{
+			content:'';
+			position: absolute;
+			bottom: -1px;
+			right: 0;
+			width: 1px;
+			height: 55.2%;
+			background-color: rgba(255, 255, 255, 0.2);
+			transform: translate(80%, 0);
+		}
+	}
+	&:nth-last-child(2) {
+		border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+	}
+	&:last-child{
+		border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+	}
+	@include max(xl) {
+		border: none!important;
+		border-bottom: 1px solid rgba(255, 255, 255, 0.2)!important;		
+		&:first-child{
+		border-top: 1px solid rgba(255, 255, 255, 0.2) !important;
+		}
+		&::after{
+			display: none!important;
+		}
+	}
 	@include max(lg) {
 		height: auto;
 	}
