--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -5,7 +5,7 @@
 	border-top: 1px solid rgba($white, 0.3);
 	position: relative;
 
-	@include max(lg) {
+	@media (max-width: 992px) {
 		padding-top: 14px;
 	}
 
@@ -24,8 +24,7 @@
 	&__container {
 		display: flex;
 		flex-wrap: wrap;
-
-		@include max(xl) {
+		@media (max-width: 992px) {
 			flex-direction: column;
 		}
 
@@ -35,15 +34,14 @@
 	}
 
 	&__logo {
-		@include max(xl) {
+		@media (max-width: 992px) {
 			max-width: 120px;
 			margin-bottom: 53px;
 		}
-
 		svg {
 			fill: $white;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				width: 100%;
 				height: 100%;
 			}
@@ -57,25 +55,43 @@
 		&--1 {
 			width: 28.5%;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				width: 100%;
 			}
 		}
 
 		&--2 {
 			width: 33%;
-
-			@include max(xl) {
+			ul {
+				&:first-child{
+					margin-right: 15px;
+				}
+			}
+			@media (max-width: 992px) {
 				width: 100%;
+				ul {
+					&:first-child {
+						margin-right: 0px;
+					}
+				}
 			}
 		}
 
 		&--3 {
 			width: 30.5%;
 			margin-left: auto;
-
-			@include max(xl) {
+			ul {
+				&:first-child {
+					margin-right: 15px;
+				}
+			}
+			@media (max-width: 992px) {
 				width: 100%;
+				ul {
+					&:first-child {
+						margin-right: 0px;
+					}
+				}
 			}
 		}
 
@@ -84,7 +100,7 @@
 			justify-content: flex-start;
 			margin-top: -234px;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				flex-direction: row;
 				justify-content: space-between;
 				margin-top: 14px;
@@ -94,7 +110,7 @@
 			}
 
 			svg {
-				@include max(xl) {
+				@media (max-width: 992px) {
 					width: 58px;
 					height: 43px;
 				}
@@ -104,7 +120,7 @@
 		&--mb {
 			margin-bottom: 154px;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				margin-bottom: 0;
 			}
 		}
@@ -112,14 +128,14 @@
 		&--right {
 			justify-content: flex-end;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				justify-content: flex-start;
 			}
 		}
 	}
 
 	ul {
-		@include max(xl) {
+		@media (max-width: 992px) {
 			width: 50%;
 		}
 
@@ -127,7 +143,7 @@
 			max-width: 215px;
 			width: 100%;
 
-			@include max(xl) {
+			@media (max-width: 992px) {
 				max-width: 100%;
 				width: 50%;
 			}
@@ -137,7 +153,7 @@
 			+ li {
 				margin-top: 15px;
 
-				@include max(xl) {
+				@media (max-width: 992px) {
 					margin-top: 5px;
 				}
 			}
@@ -150,7 +166,7 @@
 					letter-spacing: -0.3px;
 					color: $white;
 
-					@include max(lg) {
+					@media (max-width: 992px) {
 						font-size: 10px;
 						line-height: 12px;
 						font-weight: 600;
@@ -162,7 +178,7 @@
 				+ li.bold {
 					margin-top: 16px;
 
-					@include max(xl) {
+					@media (max-width: 992px) {
 						margin-top: 2px;
 					}
 				}
@@ -175,7 +191,7 @@
 				color: rgba($white, 0.3);
 				transition: color 0.3s ease;
 
-				@include max(xl) {
+				@media (max-width: 992px) {
 					font-size: 12px;
 					line-height: 140.3%;
 					letter-spacing: -0.015em;
@@ -196,7 +212,7 @@
 		line-height: 19px;
 		color: $white;
 
-		@include max(xl) {
+		@media (max-width: 992px) {
 			max-width: 144px;
 			font-size: 12px;
 			line-height: 140.3%;
@@ -213,7 +229,7 @@
 		background-color: rgba($white, 0.1);
 		margin-left: auto;
 
-		@include max(xl) {
+		@media (max-width: 992px) {
 			display: none;
 		}
 	}
@@ -224,7 +240,7 @@
 		line-height: 19px;
 		color: $white;
 
-		@include max(xl) {
+		@media (max-width: 992px) {
 			font-size: 12px;
 			line-height: 140.3%;
 			letter-spacing: -0.015em;
