--- a/src/pug/blocks/first-screen.pug
+++ b/src/pug/blocks/first-screen.pug
@@ -1,7 +1,7 @@
 section.first-screen
-	.first-screen__3d
+	.first-screen__3d#container3d
 		#model3d
-	.first-screen__bg
+	//-.first-screen__bg
 		img(src='images/ball.png', srcset='images/ball@2x.png 2x', alt='')
 	.container
 		.first-screen__title
