--- a/src/styles/blocks/first-screen.scss
+++ b/src/styles/blocks/first-screen.scss
@@ -21,15 +21,26 @@
 	&__3d{
 		position: absolute;
 		bottom: 0;
-		left: 0;
 		z-index: 1;
-		width: 100%;
-		height: 100%;
-		pointer-events: none;
+		width: 48vw;
+		height: 33vw;
+		max-width: 800px;
+		max-height: 540px;
+		left: 47.5%;
+		transform: translateX(-50%);
+		//pointer-events: none;
 		overflow: hidden;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
+		@include max(lg) {
+			display: none;
+		}
+
+		@media (min-width: 1280px) and (max-height: 900px) {
+			display: none;
+		}
 	}
 
 	&__bg {
