--- a/src/styles/blocks/first-screen.scss
+++ b/src/styles/blocks/first-screen.scss
@@ -1,17 +1,17 @@
 .first-screen {
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
+	min-height: 100vh;
 	padding: 248px 0 37px;
 	position: relative;
 
-	@media (max-width: 1200px) and (max-height: 740px) {
-		min-height: auto;
+	@media (min-width: 1200px) and (max-height: 920px) {
+		padding: 170px 0 37px;
 	}
 
 	@include max(lg) {
 		padding: 220px 0 37px;
-		height: auto;
+		min-height: 0;
 	}
 
 	@include max(sm) {
@@ -38,8 +38,9 @@
 			display: none;
 		}
 
-		@media (min-width: 1280px) and (max-height: 900px) {
-			display: none;
+		@media (min-width: 1280px) and (max-height: 920px) {
+			max-width: 500px;
+			max-height: 370px;
 		}
 	}
 
