--- a/src/styles/blocks/first-screen.scss
+++ b/src/styles/blocks/first-screen.scss
@@ -59,8 +59,9 @@
 			transform: none;
 		}
 
-		@media (min-width: 1280px) and (max-height: 900px) {
-			display: none;
+		@media (min-width: 1280px) and (max-height: 920px) {
+			max-width: 500px;
+			max-height: 370px;
 		}
 
 		img {
