--- a/src/styles/partials/footer.scss
+++ b/src/styles/partials/footer.scss
@@ -53,7 +53,7 @@
 		justify-content: space-between;
 
 		&--1 {
-			width: 28.5%;
+			width: 28%;
 
 			@media (max-width: 992px) {
 				width: 100%;
@@ -61,10 +61,10 @@
 		}
 
 		&--2 {
-			width: 33%;
+			width: 36%;
 			ul {
 				&:first-child{
-					margin-right: 15px;
+					margin-right: 0px;
 				}
 			}
 			@media (max-width: 992px) {
@@ -78,11 +78,11 @@
 		}
 
 		&--3 {
-			width: 38.5%;
+			width: 36%;
 			margin-left: auto;
 			ul {
 				&:first-child {
-					margin-right: 15px;
+					margin-right: 0px;
 				}
 			}
 			@media (max-width: 992px) {
@@ -135,13 +135,14 @@
 	}
 
 	ul {
+		width: 50%;
 		@media (max-width: 992px) {
 			width: 50%;
 		}
 
 		+ ul {
-			max-width: 215px;
-			width: 100%;
+			//max-width: 215px;
+			//width: 100%;
 
 			@media (max-width: 992px) {
 				max-width: 100%;
