--- a/src/pug/blocks/first-screen.pug
+++ b/src/pug/blocks/first-screen.pug
@@ -1,5 +1,20 @@
 section.first-screen
 	.first-screen__3d#container3d
+		.first-screen__3d-preloader
+			.lds-spinner
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+				div
+
 		#model3d
 	//-.first-screen__bg
 		img(src='images/ball.png', srcset='images/ball@2x.png 2x', alt='')
