--- a/src/styles/blocks/first-screen.scss
+++ b/src/styles/blocks/first-screen.scss
@@ -186,7 +186,7 @@
 	&__bottom {
 		display: flex;
 		margin-top: 130px;
-		padding-right: 216px;
+		//padding-right: 216px;
 		position: relative;
 		z-index: 2;
 
