--- a/src/pug/blocks/languages.pug
+++ b/src/pug/blocks/languages.pug
@@ -4,6 +4,9 @@ section.languages
 		.languages__row
 			p Общий язык  с каждым
 			.languages__text.languages__text--mobile AI алгоритм Autofaq позволяет общаться с клиентами и сотрудниками на 90 языках, понимая смысл
+
+			.languages__3d#container3d2
+				#model3d2
 			.languages__model
 				img(src='images/earth.png', srcset='images/earth@2x.png 2x', alt='')
 			.languages__list
