--- a/src/pug/blocks/first-screen.pug
+++ b/src/pug/blocks/first-screen.pug
@@ -15,7 +15,7 @@ section.first-screen
 				div
 				div
 
-		#model3d
+	//-	#model3d
 	//-.first-screen__bg
 		img(src='images/ball.png', srcset='images/ball@2x.png 2x', alt='')
 	.container
