--- a/src/pug/blocks/clients.pug
+++ b/src/pug/blocks/clients.pug
@@ -19,7 +19,7 @@ section.clients
 						.clients-card__middle
 							.clients-card__person
 								.clients-card__avatar
-									img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
+									img.lazyloadImages(data-original='images/clients/1.jpg', alt='')
 								.clients-card__author
 									p Михаил Осеевский
 									p CEO
@@ -48,7 +48,7 @@ section.clients
 						.clients-card__middle
 							.clients-card__person
 								.clients-card__avatar
-									img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
+									img.lazyloadImages(data-original='images/clients/1.jpg', alt='')
 								.clients-card__author
 									p Михаил Осеевский
 									p CEO
@@ -77,7 +77,7 @@ section.clients
 						.clients-card__middle
 							.clients-card__person
 								.clients-card__avatar
-									img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
+									img.lazyloadImages(data-original='images/clients/1.jpg', alt='')
 								.clients-card__author
 									p Михаил Осеевский
 									p CEO
@@ -106,7 +106,7 @@ section.clients
 						.clients-card__middle
 							.clients-card__person
 								.clients-card__avatar
-									img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
+									img.lazyloadImages(data-original='images/clients/1.jpg', alt='')
 								.clients-card__author
 									p Михаил Осеевский
 									p CEO
@@ -135,7 +135,7 @@ section.clients
 						.clients-card__middle
 							.clients-card__person
 								.clients-card__avatar
-									img(src='images/clients/1.jpg', srcset='images/clients/1@2x.jpg 2x', alt='')
+									img.lazyloadImages(data-original='images/clients/1.jpg', alt='')
 								.clients-card__author
 									p Михаил Осеевский
 									p CEO
