--- a/src/pug/layouts/default.pug
+++ b/src/pug/layouts/default.pug
@@ -30,5 +30,6 @@ html(lang="ru")
 
 		script(src="js/main.min.js")
 		script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAzRYZB36YULyiUsTrSkN7tu92ziw_i6Hc')
+		script(src="https://rawgit.com/intoro/Lazy_Load_JQuery/master/js/1_9_7_jquery.lazyload.js") 
 
 		block scripts
