--- a/src/pug/blocks/features.pug
+++ b/src/pug/blocks/features.pug
@@ -16,7 +16,7 @@ section.features
 						|  приложение на основе Help Desk AutoFAQ. Чат-бот всегда ответит на вопрос или переведет
 						|  обращение на оператора. Поддерживается полный цикл коммуникации: как входящий, так и исходящий.
 					.features__mockup
-						img(src='images/features/1.png', srcset='images/features/1@2x.png 2x', alt='')
+						img.lazyloadImages(data-original='images/features/1.png', alt='')
 				.swiper-slide.features__slide(data-marquee='Человек + AI')
 					.features__marquee-static Человек + AI
 					.features__title <span>Интеллектуальный</span> помощник оператора
@@ -24,13 +24,13 @@ section.features
 						|  отвечает или уточняет поступивший вопрос, если система уверена в ответе.
 						|  Вы сами управляете уровнем уверенности искусственного интеллекта для автоматического ответа
 					.features__mockup
-						img(src='images/features/2.png', srcset='images/features/2@2x.png 2x', alt='')
+						img(src='images/features/2.png', alt='')
 				.swiper-slide.features__slide(data-marquee='Самообучение')
 					.features__marquee-static Самообучение
 					.features__title <span>Система запоминает ответы</span> и пополняет базу знаний
 					.features__text AutoFAQ анализирует диалоги операторов и предоставляет удобный интерфейс для обучения
 						|  системы и добавления новых подсказок для операторов.
 					.features__note
-						img(src='images/features/4.png', srcset='images/features/4@2x.png 2x', alt='')
+						img(src='images/features/4.png', alt='')
 						span <span>Рост за месяц до</span> 70%
 						.features__text Рост с 30% до 70% <br> автоматических ответов <br> за 1 месяц
