--- a/src/pug/components/about-card.pug
+++ b/src/pug/components/about-card.pug
@@ -4,5 +4,5 @@ mixin about-card(title, topic, text, img, className)
 			.about-card__title!= title
 			.about-card__topic!= topic
 		.about-card__bg
-			img(src='images/about-card/' + img + '.png', srcset='images/about-card/' + img + '@2x.png 2x', alt='')
+			img.lazyloadImages(data-original='images/about-card/' + img + '.png', alt='')
 		.about-card__text!= text
