--- a/src/pug/components/advantages-card.pug
+++ b/src/pug/components/advantages-card.pug
@@ -1,7 +1,7 @@
 mixin advantages-card(img, title, text, className)
 	.advantages-card(class= className)
 		.advantages-card__bg
-			img(src='images/advantages-card/' + img + '.png', srcset='images/advantages-card/' + img + '@2x.png 2x', alt='')
+			img.lazyloadImages(data-original='images/advantages-card/' + img + '.png', alt='')
 		.advantages-card__title!= title
 		.advantages-card__text!= text
 		.advantages-card__more
