--- a/src/pug/components/news-card.pug
+++ b/src/pug/components/news-card.pug
@@ -3,7 +3,7 @@ mixin news-card(img, brand, day, month, year, text, className)
 		figure
 			if img
 				.news-card__bg
-					img(src='images/news-card/' + img + '.jpg', srcset='images/news-card/' + img + '@2x.jpg 2x', alt='')
+					img(src='images/news-card/' + img + '.jpg', alt='')
 			else
 				.news-card__bg
 			.news-card__content
@@ -12,7 +12,7 @@ mixin news-card(img, brand, day, month, year, text, className)
 						.news-card__day!= day
 					if brand
 						.news-card__brand
-							img(src='images/publish/' + brand + '.png', srcset='images/publish/' + brand + '@2x.png 2x', alt='')
+							img(src='images/publish/' + brand + '.png', alt='')
 					div
 						.news-card__month!= month
 						.news-card__year!= year
