--- a/src/pug/partials/_sidebar.pug
+++ b/src/pug/partials/_sidebar.pug
@@ -38,6 +38,26 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
 		li
 			a(href='#', target='_blank') Решения
 			.sidebar__menu-inner
@@ -71,6 +91,27 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
 		li
 			a(href='#', target='_blank') Кейсы
 			.sidebar__menu-inner
@@ -104,6 +145,27 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
 		li
 			a(href='#', target='_blank') Тарифы
 			.sidebar__menu-inner
@@ -137,6 +199,27 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
 		li
 			a(href='#', target='_blank') Ресурсы
 			.sidebar__menu-inner
@@ -170,6 +253,27 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
 		li
 			a(href='#', target='_blank') Компания
 			.sidebar__menu-inner
@@ -203,3 +307,24 @@ aside.sidebar
 				.sidebar__menu-image
 					img(src='images/bg-menu.png', alt='')
 					+button('Оставить заявку', 'button--green sidebar__request-btn', '#')
+			
+			.sidebar__menu-plus
+			.sidebar__menu-inner.sidebar__menu-inner-mobile
+				.sidebar__menu-content
+					.sidebar__menu-content-wrapper
+						ul
+							li Autofaq.ai
+							li
+								a(href='#', target='_blank') О сервисе
+							li
+								a(href='#', target='_blank') Кейсы внедрений
+							li
+								a(href='#', target='_blank') Тарифы
+						ul
+							li Компоненты
+							li
+								a(href='#', target='_blank') Контактный чат-центр
+							li
+								a(href='#', target='_blank') Базы знаний
+							li
+								a(href='#', target='_blank') Чат-бот
