--- a/src/pug/blocks/first-screen.pug
+++ b/src/pug/blocks/first-screen.pug
@@ -18,6 +18,36 @@ section.first-screen
 	//-	#model3d
 	//-.first-screen__bg
 		img(src='images/ball.png', srcset='images/ball@2x.png 2x', alt='')
+
+	.first-screen__slider
+		#myTurntable.turntable
+			ul
+				li(data-img-src='images/ball/1.png')
+				li(data-img-src='images/ball/2.png')
+				li(data-img-src='images/ball/3.png')
+				li(data-img-src='images/ball/4.png')
+				li(data-img-src='images/ball/5.png')
+				li(data-img-src='images/ball/6.png')
+				li(data-img-src='images/ball/7.png')
+				li(data-img-src='images/ball/8.png')
+				li(data-img-src='images/ball/9.png')
+				li(data-img-src='images/ball/10.png')
+				li(data-img-src='images/ball/11.png')
+				li(data-img-src='images/ball/12.png')
+				li(data-img-src='images/ball/13.png')
+				li(data-img-src='images/ball/14.png')
+				li(data-img-src='images/ball/15.png')
+				li(data-img-src='images/ball/16.png')
+				li(data-img-src='images/ball/17.png')
+				li(data-img-src='images/ball/18.png')
+				li(data-img-src='images/ball/19.png')
+				li(data-img-src='images/ball/20.png')
+				li(data-img-src='images/ball/21.png')
+				li(data-img-src='images/ball/22.png')
+				li(data-img-src='images/ball/23.png')
+				li(data-img-src='images/ball/24.png')
+				li(data-img-src='images/ball/25.png')
+				li(data-img-src='images/ball/26.png')
 	.container
 		.first-screen__title
 			span Autofaq
