--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 /*libs*/
 @import "./../../node_modules/swiper/swiper";
 @import "libs/select2.min.css";
+@import "libs/turntable.css";
 
 
 /* main */
