--- a/src/pug/blocks/calculate.pug
+++ b/src/pug/blocks/calculate.pug
@@ -6,9 +6,8 @@ section.calculate
 		.calculate__middle
 			.calculate__calc
 				.calculate__calc-item
-					select.js-calculate-select
-						option(value='Клиентская поддержка') Клиентская поддержка
-						option(value='Клиентская поддержка 2') Клиентская поддержка 2
+					.calculate__calc-item-title
+						|Клиентская поддержка
 				.calculate__calc-item
 					span Сотрудников на поддержке
 					.range-value 100
